Fix copyright spacing in footer

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -1,4 +1,3 @@
-
 // Badges
 
 %badge {
@@ -179,15 +178,19 @@ footer.nav-footer {
 
   h3 {
     text-align: center;
-    font-size: 1em;
+    font-size: .8em;
     margin: 1em 0;
-    padding: 0;
+    padding: 0 1em;
     color: #999;
     font-weight: normal;
     font-style: italic;
   }
 
   @include media($desktop) {
+    h3 {
+      padding: 0;
+      font-size: 1em;
+    }
     nav {
       border: #eee 1px solid;
       border-left: 0;
